@@ -5,6 +5,7 @@ Log:
 - 16/10/2007, version 1.1.0: roms
 	- adding NSpire support...
 	- unified Product Number & Main Calc Id into Product Id and maintained compatibility
+	- use ticables_get_usb_devices() to probe USB hand-helds rathen than heuristic method (more reliable)
 
 - 04/10/2007, version 1.0.9: roms
 	- fixed ROM dumping on TI92+/V200: switching to HOME screen failed
